# text-retrieval

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: course_wrapped.py  main.py
