[project]
name = "Text Retrieval & Search Engines"
requires-python = ">=3.12"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S101", "ANN401", "PLR0133", "FIX002", "TD003", "ERA001"]
extend-select = ["I"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
